// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditItem folder should render 1`] = `
<Screen
  dismissButtonTitle="Cancel"
  drawUnderNavBar={true}
  navBarStyle="modal"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "edit-item.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={true}
  title="Edit Folder"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <KeyboardAwareScrollView
      style={
        Object {
          "backgroundColor": "#F5F5F5",
          "flex": 1,
        }
      }
    >
      <FormLabel>
        Title
      </FormLabel>
      <RowWithTextInput
        border="both"
        identifier="edit-item.name"
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Title"
        style={
          Object {
            "height": 45,
          }
        }
        title=""
        value="Folder"
      />
      <RequiredFieldSubscript
        title=""
        visible={false}
      />
      <FormLabel>
        Access
      </FormLabel>
      <Row
        border="both"
        disclosureIndicator={true}
        onPress={[Function]}
        testID="edit-item.publish"
        title="Publish"
        titleStyles={
          Object {
            "fontWeight": "normal",
          }
        }
      />
      <View
        style={
          Object {
            "height": 48,
          }
        }
      />
      <Row
        border="both"
        image={
          Object {
            "uri": "trashLine",
          }
        }
        imageTint="#EE0612"
        onPress={[Function]}
        testID="edit-item.delete"
        title="Delete Folder"
        titleStyles={
          Object {
            "color": "#EE0612",
          }
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`EditItem folder shows availability when there is a lock_at date 1`] = `
<Screen
  dismissButtonTitle="Cancel"
  drawUnderNavBar={true}
  navBarStyle="modal"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "edit-item.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={true}
  title="Edit Folder"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <KeyboardAwareScrollView
      style={
        Object {
          "backgroundColor": "#F5F5F5",
          "flex": 1,
        }
      }
    >
      <FormLabel>
        Title
      </FormLabel>
      <RowWithTextInput
        border="both"
        identifier="edit-item.name"
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Title"
        style={
          Object {
            "height": 45,
          }
        }
        title=""
        value="Folder"
      />
      <RequiredFieldSubscript
        title=""
        visible={false}
      />
      <FormLabel>
        Access
      </FormLabel>
      <Row
        border="both"
        disclosureIndicator={true}
        onPress={[Function]}
        testID="edit-item.publish"
        title="Restricted Access"
        titleStyles={
          Object {
            "fontWeight": "normal",
          }
        }
      />
      <Row
        border="bottom"
        disclosureIndicator={true}
        onPress={[Function]}
        testID="edit-item.hidden"
        title="Schedule student availability"
        titleStyles={
          Object {
            "fontWeight": "normal",
          }
        }
      />
      <View>
        <FormLabel>
          Availability
        </FormLabel>
        <RowSeparator />
        <RowWithDateInput
          border="both"
          date={null}
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          showRemoveButton={true}
          testID="edit-item.unlock_at"
          title="Available from"
        />
        <RequiredFieldSubscript
          title=""
          visible={false}
        />
        <RowWithDateInput
          border="bottom"
          date="2017-11-17T00:00:00Z"
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          showRemoveButton={true}
          testID="edit-item.lock_at"
          title="Available to"
        />
        <RequiredFieldSubscript
          title=""
          visible={false}
        />
      </View>
      <View
        style={
          Object {
            "height": 48,
          }
        }
      />
      <Row
        border="both"
        image={
          Object {
            "uri": "trashLine",
          }
        }
        imageTint="#EE0612"
        onPress={[Function]}
        testID="edit-item.delete"
        title="Delete Folder"
        titleStyles={
          Object {
            "color": "#EE0612",
          }
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`EditItem folder shows availability when there is an unlock_at date 1`] = `
<Screen
  dismissButtonTitle="Cancel"
  drawUnderNavBar={true}
  navBarStyle="modal"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "edit-item.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={true}
  title="Edit Folder"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <KeyboardAwareScrollView
      style={
        Object {
          "backgroundColor": "#F5F5F5",
          "flex": 1,
        }
      }
    >
      <FormLabel>
        Title
      </FormLabel>
      <RowWithTextInput
        border="both"
        identifier="edit-item.name"
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Title"
        style={
          Object {
            "height": 45,
          }
        }
        title=""
        value="Folder"
      />
      <RequiredFieldSubscript
        title=""
        visible={false}
      />
      <FormLabel>
        Access
      </FormLabel>
      <Row
        border="both"
        disclosureIndicator={true}
        onPress={[Function]}
        testID="edit-item.publish"
        title="Restricted Access"
        titleStyles={
          Object {
            "fontWeight": "normal",
          }
        }
      />
      <Row
        border="bottom"
        disclosureIndicator={true}
        onPress={[Function]}
        testID="edit-item.hidden"
        title="Schedule student availability"
        titleStyles={
          Object {
            "fontWeight": "normal",
          }
        }
      />
      <View>
        <FormLabel>
          Availability
        </FormLabel>
        <RowSeparator />
        <RowWithDateInput
          border="both"
          date="2017-11-17T00:00:00Z"
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          showRemoveButton={true}
          testID="edit-item.unlock_at"
          title="Available from"
        />
        <RequiredFieldSubscript
          title=""
          visible={false}
        />
        <RowWithDateInput
          border="bottom"
          date={null}
          onPress={[Function]}
          onRemoveDatePress={[Function]}
          showRemoveButton={true}
          testID="edit-item.lock_at"
          title="Available to"
        />
        <RequiredFieldSubscript
          title=""
          visible={false}
        />
      </View>
      <View
        style={
          Object {
            "height": 48,
          }
        }
      />
      <Row
        border="both"
        image={
          Object {
            "uri": "trashLine",
          }
        }
        imageTint="#EE0612"
        onPress={[Function]}
        testID="edit-item.delete"
        title="Delete Folder"
        titleStyles={
          Object {
            "color": "#EE0612",
          }
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;

exports[`EditItem folder shows the type of restriction when hidden 1`] = `
<Screen
  dismissButtonTitle="Cancel"
  drawUnderNavBar={true}
  navBarStyle="modal"
  rightBarButtons={
    Array [
      Object {
        "action": [Function],
        "style": "done",
        "testID": "edit-item.done-btn",
        "title": "Done",
      },
    ]
  }
  showDismissButton={true}
  title="Edit Folder"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <KeyboardAwareScrollView
      style={
        Object {
          "backgroundColor": "#F5F5F5",
          "flex": 1,
        }
      }
    >
      <FormLabel>
        Title
      </FormLabel>
      <RowWithTextInput
        border="both"
        identifier="edit-item.name"
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Title"
        style={
          Object {
            "height": 45,
          }
        }
        title=""
        value="Folder"
      />
      <RequiredFieldSubscript
        title=""
        visible={false}
      />
      <FormLabel>
        Access
      </FormLabel>
      <Row
        border="both"
        disclosureIndicator={true}
        onPress={[Function]}
        testID="edit-item.publish"
        title="Restricted Access"
        titleStyles={
          Object {
            "fontWeight": "normal",
          }
        }
      />
      <Row
        border="bottom"
        disclosureIndicator={true}
        onPress={[Function]}
        testID="edit-item.hidden"
        title="Hidden. Files inside will be available with links."
        titleStyles={
          Object {
            "fontWeight": "normal",
          }
        }
      />
      <View
        style={
          Object {
            "height": 48,
          }
        }
      />
      <Row
        border="both"
        image={
          Object {
            "uri": "trashLine",
          }
        }
        imageTint="#EE0612"
        onPress={[Function]}
        testID="edit-item.delete"
        title="Delete Folder"
        titleStyles={
          Object {
            "color": "#EE0612",
          }
        }
      />
    </KeyboardAwareScrollView>
  </View>
</Screen>
`;
